syntax = "proto2";
package goproto;
enum EnumRegisterLiveStreamStatus {
  REGISTER_LIVE_STREAM_STATUS_STATUS  = 1;
  REGISTER_LIVE_STREAM_STATUS_ERROR   = 2;
  REGISTER_LIVE_STREAM_STATUS_MODE    = 3;
  REGISTER_LIVE_STREAM_STATUS_BITRATE = 4;
}
message RequestLiveStream {
  optional string url = 1;
  optional bool encode = 2;
}

message RequestGetLiveStreamStatus {
  repeated EnumRegisterLiveStreamStatus register_live_stream_status   = 1;
  repeated EnumRegisterLiveStreamStatus unregister_live_stream_status = 2;
}
