syntax = "proto2";

message LiveStream {
  optional string url = 1;
}
